@@ -8,6 +8,7 @@ Additions:
 	- Get/SetWrapSMode
 	- Get/SetWrapTMode
 	- these play some currently unknown role in allowing sprites to wrap around, and is required for Beam sprites
+* Add support for custom items in the items attr on players.xml by using their name instead of id.
 /newline/
 Fixes:
 * Fix GridEntity render callbacks being massively broken
@@ -17,6 +18,7 @@ Fixes:
 	- Will silently fail if returning an invalid type to prevent crashes
 * Fix Entity:AddWeakness duration being incorrect
 * Fix Beam:Add(Point) override
+* Fix nomarks players.xml attribute
 /newline/
 v1.0.4 - 
 Additions:
